# m6502

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/m6502/: memory.py  processor.py
tests/: test_processor.py
