[project]
name = "m6502"
version = "1.0.0"
description = "An emulator of the 6502 processor"
readme = "README.md" 
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
authors = [
  {name = "Manuel Martín-Ortiz", email = "mmartinortiz@gmail.com" }
]

dependencies = [
]

# List additional groups of dependencies here (e.g. development
# dependencies). Users will be able to install these using the "extras"
# syntax, for example:
#
#   $ pip install sampleproject[dev]
#
# Similar to `dependencies` above, these must be valid existing
# projects.
[project.optional-dependencies]
dev = ["black", "isort"]
test = ["coverage", "pytest", "tox"]

[project.urls] 
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Reports" = "https://github.com/pypa/sampleproject/issues"
"Funding" = "https://donate.pypi.org"
"Say Thanks!" = "http://saythanks.io/to/example"
"Source" = "https://github.com/pypa/sampleproject/"

[project.scripts]  # Optional
sample = "sample:main"

[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
package-data = {"sample" = ["*.dat"]}

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

